# EODHD-MCP-Server

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .semgrepignore  .yamllint.yml  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  cli.py  docker-compose.yml  manifest.json  pyproject.toml  requirements-test.txt  requirements.txt  server.py
.github/workflows/: build-push.yml  ci.yml  deploy.yml  test.yml
app/: api_client.py  auth.py  batch.py  cache.py  config.py  export.py  formatter.py  health.py  input_formatter.py  logging_config.py  metrics.py  models.py  oauth.py  oauth_server.py  redis_cache.py  response.py  response_formatter.py  utils.py  validators.py
app/prompts/: __init__.py  analyze_stock.py  compare_stocks.py  market_overview.py
app/resources/: __init__.py
app/resources/references/: README.md
app/resources/references/endpoints/: README.md  praams-report-bond-by-isin.md  praams-report-equity-by-isin.md  praams-report-equity-by-ticker.md
app/resources/references/general/: README.md  authentication.md
app/resources/references/subscriptions/: README.md
app/tools/: __init__.py  batch_quotes.py  capture_realtime_ws.py  compare_stocks.py  export_data.py  get_analyst_ratings.py  get_bonds_data.py  get_bulk_eod.py  get_bulk_fundamentals.py  get_cboe_index_data.py  get_cboe_indices_list.py  get_company_news.py  get_crypto_list.py  get_delisted_stocks.py  get_earnings_trends.py  get_economic_events.py  get_esg_data.py  get_exchange_details.py  get_exchange_tickers.py  get_exchanges_list.py  get_financial_ratios.py  get_forex_list.py  get_fundamentals_data.py  get_historical_constituents.py  get_historical_dividends.py  get_historical_market_cap.py  get_historical_splits.py  get_historical_stock_prices.py  get_id_mapping.py  get_insider_summary.py  get_insider_transactions.py  get_institutional_holders.py  get_intraday_historical_data.py  get_live_price_data.py  get_macro_indicator.py  get_market_status.py  get_mp_illio_market_insights_best_worst.py  get_mp_illio_market_insights_beta_bands.py  get_mp_illio_market_insights_largest_volatility.py  get_mp_illio_market_insights_performance.py  (+58 more)
entrypoints/: server_http.py
examples/: getting_started.ipynb  portfolio_analysis.ipynb
hooks/: pre-commit
test/: all_tests.py  all_tests_beta.py  test_client_http.py  test_client_sse.py  test_client_stdio.py
tests/: __init__.py  conftest.py  test_api_client.py  test_auth.py  test_batch.py  test_cache.py  test_export.py  test_formatter.py  test_health.py  test_logging_config.py  test_metrics.py  test_models.py  test_oauth.py  test_prompts.py  test_redis_cache.py  test_resources.py  test_server.py  test_tool_registration.py  test_tools.py  test_utils.py  test_validators.py
tests/auto/: __init__.py  conftest.py  test_api_client.py  test_input_formatter.py  test_prompts.py  test_resources.py  test_response_formatter.py  test_server.py  test_tool_error_handling_consistency.py  test_tool_registration.py  test_tools.py
tests/manual/: __init__.py  all_tests.py  all_tests_beta.py  test_client_http.py  test_client_sse.py  test_client_stdio.py
