[project]
name = "eodhd-mcp"
version = "2.3.2"
description = "MCP server for EODHD financial data APIs"
license = "MIT"
requires-python = ">=3.11"
authors = [{name = "EODHD", email = "support@eodhistoricaldata.com"}]
dependencies = [
    "python-dotenv>=1.0.0",
    "fastmcp>=2.0.0",
    "httpx>=0.27.0",
    "starlette>=0.37.0",
    "uvicorn>=0.30.0",
    "pyjwt>=2.8.0",
    "python-multipart>=0.0.9",
    "itsdangerous>=2.1.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "pytest-timeout>=2.3",
    "respx>=0.22",
    "ruff>=0.9",
    "mypy>=1.13",
    "bandit>=1.8",
    "pip-audit>=2.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# --- Ruff ---
[tool.ruff]
target-version = "py311"
line-length = 120
src = ["app", "tests"]

[tool.ruff.lint]
select = [
    "F",      # Pyflakes
    "E", "W", # pycodestyle
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "A",      # flake8-builtins
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "S",      # flake8-bandit (security)
    "T20",    # flake8-print
    "RUF",    # Ruff-specific
    "C90",    # McCabe complexity
    "ARG",    # unused arguments
    "PL",     # Pylint subset
    "PERF",   # performance
]
ignore = [
    "E501",   # line length (handled by formatter)
    "S101",   # assert in tests
]

[tool.ruff.lint.mccabe]
max-complexity = 12

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "T20", "PLR2004", "ARG001"]
"test/**/*.py" = ["S101", "T20", "PLR2004", "ARG001"]

[tool.ruff.format]
quote-style = "double"

# --- Mypy ---
[tool.mypy]
python_version = "3.11"
warn_return_any = true
disallow_untyped_defs = false
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "fastmcp.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "mcp.*"
ignore_missing_imports = true

# --- Pytest ---
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = ["--strict-markers", "--strict-config", "-ra", "--tb=short"]
markers = [
    "slow: marks tests as slow",
    "integration: marks integration tests",
]
timeout = 30

# --- Coverage ---
[tool.coverage.run]
source = ["app"]
branch = true

[tool.coverage.report]
fail_under = 50
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@overload",
    "if __name__ == .__main__.",
]
